<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Drawing</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="tag_line">Draw your favorite drawing</string>
    <string name="step_title">STEPS</string>

    <!--left navigation drawer-->
    <string name="menu_home">Home</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_about">About Us</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_search">Search</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="dev_by">Developed by: Viavi WebTech</string>
    <string name="stroke_title">Set stroke</string>

    <string name="tools_brush">Brush</string>
    <string name="tools_color">Color</string>
    <string name="tools_save">Save</string>
    <string name="tools_clear">Clear</string>
    <string name="tools_erase">Eraser</string>
    <string name="tools_stroke">Stroke</string>

    <!-- about us -->
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>

    <!--about details -->
    <string name="version_name">1.0.0</string>
    <string name="company_name">Viavi WebTech</string>
    <string name="email_id">info@viaviweb.com</string>
    <string name="website_name">www.viaviweb.com</string>
    <string name="contact_no">+91 9227777522</string>
    <string name="about_desc"><![CDATA[<p>As Viavi Webtech is finest offshore IT company which has expertise in the below mentioned all technologies and our professional, dedicated approach towards our work has always satisfied our clients as well as users. We have reached to this level because of the dedication and hard work of our 10+ years experienced team as well as new ideas of freshers, they always provide the best solutions. Here are the promising services served by Viavi Webtech.</p>         <p>Contact on Skype &amp; Email for more information.</p>         <p><strong>Skype ID:</strong> support.viaviweb <strong>OR</strong> viaviwebtech<br />         <strong>Email:</strong> info@viaviweb.com <strong>OR</strong> viaviwebtech@gmail.com<br />         <strong>Website:</strong> <a href=\"http://www.viaviweb.com\">http://www.viaviweb.com</a><br />         <br />         Our Products : <em><strong><a href=\"https://codecanyon.net/user/viaviwebtech/portfolio?ref=viaviwebtech\">CODECANYON</a></strong></em></p>]]></string>

    <string name="admob_publisher_id">pub-3940256099942544</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native_id">ca-app-pub-3940256099942544/2247696110</string>

    <string name="facebook_banner_id">xxx_xxxx</string>
    <string name="facebook_interstitial_id">xxxx_xxxxx</string>
    <string name="facebook_native_id">xxxxx_xxxx</string>

    <string name="banner_ads_on_off">true</string><!--true/false if you want to ads then make it true otherwise false -->
    <string name="banner_ads_type">admob</string><!--admob/facebook add anyone -->

    <string name="interstitial_ads_on_off">true</string><!--true/false if you want to ads then make it true otherwise false -->
    <string name="interstitial_ads_type">admob</string><!--admob/facebook add anyone -->

    <string name="native_ads_on_off">true</string><!--true/false if you want to ads then make it true otherwise false -->
    <string name="native_ads_type">admob</string><!--admob/facebook add anyone -->
    <string name="native_ads_position">7</string>

    <!-- more application for play store -->
    <string name="play_more_apps">https://play.google.com/store/apps/dev?id=7157478532572017100</string>
    <string name="privacy_gdpr_url">http://apptific.com/PlayStore/Privacy-Policy.html</string>

     <!--if you want rtl change value of isRTL to true else false-->
    <string name="isRTL">false</string>

    <string name="facebook_url">https://www.facebook.com/viaviweb/</string>
    <string name="instagram_url">https://www.instagram.com/viaviwebtech/</string>
    <string name="youtube_url">https://www.youtube.com/user/viaviwebtech/</string>

    <string name="share_msg">Hi,Please download it from Google Play Store Free Here \n</string>
    <string name="image_permission">You cannot share and save images without requested permission</string>
    <string name="image_save">Image Save Successful</string>
    <string name="complete_drawing_msg">Please complete drawing first after save and share</string>
    <string name="loading_msg">Loading..</string>

    <string name="exit_msg">Are You Sure You Want To Quit?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="wrong">something went to wrong please try again later</string>
    <string name="default_notification_channel_id">AndroidDrawing</string>

</resources>