<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_nav"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/sidebar_top_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@mipmap/round_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:gravity="center|start"
                        android:orientation="vertical">

                        <TextView
                            fontPath="fonts/Montserrat-SemiBold_0.otf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/app_name"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            tools:ignore="MissingPrefix" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/tag_line"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1.1dp" />

            <LinearLayout
                android:id="@+id/ll_ab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_ab"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_about" />

                <TextView
                    android:id="@+id/textView_ab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    fontPath="fonts/Montserrat-SemiBold_0.otf"
                    tools:ignore="MissingPrefix"
                    android:text="@string/menu_about"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_share"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:id="@+id/textView_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/menu_share_app"
                    fontPath="fonts/Montserrat-SemiBold_0.otf"
                    tools:ignore="MissingPrefix"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_rate"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_rate" />

                <TextView
                    android:id="@+id/textView_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/menu_rate_app"
                    fontPath="fonts/Montserrat-SemiBold_0.otf"
                    tools:ignore="MissingPrefix"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_nore"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_more" />

                <TextView
                    android:id="@+id/textView_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    fontPath="fonts/Montserrat-SemiBold_0.otf"
                    tools:ignore="MissingPrefix"
                    android:text="@string/menu_moreapp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_priv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_priv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_privacy" />

                <TextView
                    android:id="@+id/textView_priv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/menu_privacy"
                    fontPath="fonts/Montserrat-SemiBold_0.otf"
                    tools:ignore="MissingPrefix"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>