<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/gradient_toolbar">

        <ImageView
            android:id="@+id/image_backress"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center|start"
            android:contentDescription="@string/app_name"
            ads:srcCompat="@drawable/img_backpress" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                ads:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/toolbar_step"
                fontPath="fonts/Montserrat-SemiBold_0.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="MissingPrefix" />

            <ImageView
                android:id="@+id/image_next"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                ads:srcCompat="@drawable/forward" />

            <ImageView
                android:id="@+id/image_share"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                ads:srcCompat="@drawable/share" />
        </LinearLayout>

        <TextView
            android:id="@+id/toolbar_title"
            fontPath="fonts/Montserrat-SemiBold_0.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/image_backress"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />


    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pagercake"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_section"
        android:layout_below="@+id/toolbar" />

    <RelativeLayout
        android:id="@+id/rell"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_section"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/rell2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/textView"
            android:alpha="0.6" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/dev_by"
            android:textColor="@color/black"
            android:visibility="invisible" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@+id/adView"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardUseCompatPadding="false"
            card_view:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView1_pencil"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/brush_btn" />

                    <TextView
                        android:id="@+id/textView_brush"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tools_brush" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2_color"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/color_hover" />

                    <TextView
                        android:id="@+id/textView_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tools_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3_eraser"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/erase_btn" />

                    <TextView
                        android:id="@+id/textView_erase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tools_erase" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4_stroke"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/stroke_hover" />

                    <TextView
                        android:id="@+id/textView_stroke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tools_stroke" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5_clear"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/clear_hover" />

                    <TextView
                        android:id="@+id/textView_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tools_clear" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView1_save"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginBottom="3dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/save_hover" />

                    <TextView
                        android:id="@+id/textView_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tools_save" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>